--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -4,7 +4,7 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-183049007-1');
+  gtag('config', 'UA-183049007-1', {'siteSpeedSampleRate': 100});
 </script>
 
 {{ with .Params.comments }}
