--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -38,7 +38,7 @@ function loadDisqus() {
     // 如果你和我一样在用 DisqusJS，loadDisqus() 里就应该是 DisqusJS 的初始化代码 new DisqusJS({...})
     new DisqusJS({
       shortname: "yzi",
-      api: "https://disqus.yzi.io/",
+      api: "https://disqus.yzi.io/api/",
       apikey: "AmJsSVQd4S5jFk8Uo40Cl87RtltZmpSM0JlIGz3O194CkjqXvzkHkEDWMHxPeTLp",
       admin: "Yzi"
     })
