--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,11 +1,4 @@
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-183049007-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-183049007-1', {'siteSpeedSampleRate': 100});
-</script>
+{{ template "_internal/google_analytics_async.html" . }}
 
 {{ with .Params.comments }}
 <div id="disqus_thread"></div>
