--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
 <content>
   <br />
-  <input type="search" id="site-search" name="q" placeholder="Search the site..." size="30">
+  <input type="search" id="site-search" name="q" placeholder="Search the site...">
   <button onclick="search()">搜索</button>
   <script>
       function search() {
